[gd_scene load_steps=16 format=3 uid="uid://bl372pp24j6jb"]

[ext_resource type="Script" uid="uid://dnxq7xae7ucl0" path="res://scripts/GameUI.gd" id="1_sjnlv"]
[ext_resource type="Script" uid="uid://crwbsu7ltt0xd" path="res://scripts/collection_ui.gd" id="2_5ji2y"]
[ext_resource type="Texture2D" uid="uid://b8ux52nch0v44" path="res://img/pt_interrogation.png" id="3_5dnvl"]
[ext_resource type="Script" uid="uid://dwgt6m1335bch" path="res://scripts/suspicion_bar.gd" id="4_5dnvl"]
[ext_resource type="Texture2D" uid="uid://cgve7etk6qcbx" path="res://img/white.png" id="5_ftf0b"]
[ext_resource type="Shader" uid="uid://ca1j7vchmivik" path="res://Shaders/vignette.gdshader" id="5_lvkef"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ftf0b"]
bg_color = Color(0.7254902, 0.43529412, 0.101960786, 0.9019608)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lvkef"]
bg_color = Color(0.15294118, 0.15294118, 0.15294118, 0.9411765)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ji2y"]
bg_color = Color(0.3403393, 0.34033936, 0.34033918, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5dnvl"]
bg_color = Color(0.25532895, 0.45109338, 0.18999308, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ru575"]
shader = ExtResource("5_lvkef")
shader_parameter/inner_radius = 1.0
shader_parameter/outer_radius = 2.0
shader_parameter/vignette_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ru575"]
bg_color = Color(0.16862746, 0.16862746, 0.16862746, 0.78431374)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_lvkef"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qhru3"]
bg_color = Color(0.3104416, 0.47983503, 0.17399943, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.1675863, 0.23493522, 0.05586396, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pnkpl"]
bg_color = Color(0.5977893, 0.36142427, 0.20096636, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.24421382, 0.15556678, 0.04080821, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sjnlv")

[node name="DebugAnchors" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TL" type="Panel" parent="DebugAnchors"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TR" type="Panel" parent="DebugAnchors"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="BL" type="Panel" parent="DebugAnchors"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="BR" type="Panel" parent="DebugAnchors"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="Menu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayButton" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollectionButton" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreditButton" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuitButton" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="Collection" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollectionPanel" type="Panel" parent="Collection"]
custom_minimum_size = Vector2(800, 500)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ftf0b")
script = ExtResource("2_5ji2y")
missingTexture = ExtResource("3_5dnvl")

[node name="ScrollContainer" type="ScrollContainer" parent="Collection/CollectionPanel"]
layout_mode = 1
offset_left = 25.0
offset_top = 25.0
offset_right = 775.0
offset_bottom = 475.0

[node name="VBoxContainer" type="VBoxContainer" parent="Collection/CollectionPanel/ScrollContainer"]
custom_minimum_size = Vector2(750, 0)
layout_mode = 2

[node name="ExplanationPanel" type="Panel" parent="Collection"]
custom_minimum_size = Vector2(283.155, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lvkef")

[node name="RichTextLabel" type="RichTextLabel" parent="Collection/ExplanationPanel"]
custom_minimum_size = Vector2(266.03, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -0.5
offset_right = 0.5
grow_horizontal = 2
grow_vertical = 2
text = "Hover an object to check if you have collected it, and read it's description!"

[node name="SuspicionBar" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 5.52
offset_bottom = 55.52
grow_horizontal = 2
script = ExtResource("4_5dnvl")

[node name="ProgressBar" type="ProgressBar" parent="SuspicionBar"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_5ji2y")
theme_override_styles/fill = SubResource("StyleBoxFlat_5dnvl")
show_percentage = false

[node name="Label" type="Label" parent="SuspicionBar/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "GUIDE SUSPICION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Effects" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Vignette" type="TextureRect" parent="Effects"]
material = SubResource("ShaderMaterial_ru575")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_ftf0b")

[node name="Timer" type="Timer" parent="."]

[node name="GameOverScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GameOverScreen"]
custom_minimum_size = Vector2(1000, 450)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ru575")

[node name="RichTextLabel" type="RichTextLabel" parent="GameOverScreen/Panel"]
material = SubResource("CanvasItemMaterial_lvkef")
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 414.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 50
theme_override_font_sizes/bold_italics_font_size = 50
theme_override_font_sizes/italics_font_size = 50
theme_override_font_sizes/mono_font_size = 50
bbcode_enabled = true
text = "[color=red]YOU HAVE BEEN CAUGHT[/color]

The Guide's suspicions were confirmed, your theft in this museum ends here...

...but is it really over?"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverScreen"]
custom_minimum_size = Vector2(400, 70)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -170.845
offset_right = 200.0
offset_bottom = -100.84479
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_qhru3")
text = "GO STEAL NEXT MUSEUM ?"

[node name="MenuButton" type="Button" parent="GameOverScreen"]
custom_minimum_size = Vector2(400, 70)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -76.875
offset_right = 200.0
offset_bottom = -6.875
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_pnkpl")
text = "GO TO MENU
"

[connection signal="pressed" from="Menu/PlayButton" to="." method="play_button_is_pressed"]
[connection signal="pressed" from="Menu/CollectionButton" to="." method="collection_button_is_pressed"]
[connection signal="pressed" from="GameOverScreen/RestartButton" to="." method="_on_restart_button_pressed"]
